Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/UncheckedArray.out
UncheckedArray.java:14:20: compiler.err.generic.array.creation
1 error
